# 1284-sds-prog2

./: .buildinfo  .gitignore  README.md  _config.yml  _toc.yml  environment.yaml  genindex.html  index.html  index.md  objects.inv  pyproject.toml  references.bib  search.html  searchindex.js  wiki_crawling.py
.github/workflows/: gh-pages.yaml
_sources/: index.md
_sources/contents/: blockchain.ipynb  compression.ipynb  crawler.ipynb  database.ipynb  email.ipynb  regex.ipynb  request.ipynb  retrieval.ipynb  scraping.ipynb  setup-git.ipynb  setup-python.ipynb  socket.ipynb  web-server.ipynb  web-system.ipynb  webpage.ipynb  webserver.ipynb
_static/: custom.css
contents/: blockchain.html  compression.html  compression.ipynb  crawler.html  crawler.ipynb  database.html  database.ipynb  email.html  email.ipynb  encryption.html  encryption.ipynb  regex.html  regex.ipynb  request.html  request.ipynb  retrieval.html  retrieval.ipynb  scraping.html  setup-git.html  setup-git.ipynb  setup-python.html  setup-python.ipynb  socket.html  socket.ipynb  web-server.html  web-system.html  webpage.html  webpage.ipynb  webserver.html  webserver.ipynb
contents/server/: server.py  template.py  template_1.py  template_2.py  template_3.py  template_4.py  template_app.py
contents/server/public_html/: 404.html  error.html  index.html  style.css
examples/: count_jukugo.py  translate.py  wagahai.txt
