[tool.poetry]
name = "sdsprog2"
version = "1.0.0"
description = "Programming II course in Hitotsubashi University"
authors = ["Tatsuya Yatagawa <tatsy.mail@gmail.com>"]
readme = "README.md"
homepage = "https://tatsy.github.io/1284-sds-prog2/"
repository = "https://github.com/tatsy/1284-sds-prog2.git"
license = "CC BY-NC-SA 4.0"

exclude = [
  "autograding/*",
  "contents/*",
  "data/*",
  "dist/*",
  "templates/*",
  "_build/*",
  "_static/*",
  ".github/*",
  ".mypy_cache/*",
  ".pytest_cache/*",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.25.0"
scipy = "^1.11.1"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
pandas = "^2.0.3"
seaborn = "^0.12.2"
tqdm = "^4.66.1"
nodejs = "^0.1.1"
jupyterlab = "^4.0.0"
jupyterlab-widgets = "^3.0.8"
ipywidgets = "^8.1.0"
pytest = "^7.4.0"
japanize-matplotlib = "^1.1.3"
colorama = "^0.4.6"
regex = "^2023.12.25"
automathon = "^0.0.15"
docutils = "0.17.1"
beautifulsoup4 = "^4.12.3"
scikit-image = "^0.23.1"
pillow = "^10.3.0"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0"
mypy = "^1.4.1"
isort = "^5.12.0"
black = "^23.3.0"
jupyter-book = "^0.15.1"
jupyterlab-code-formatter = "^2.2.1"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
length_sort = true
line_length = 99

[tool.mypy]
python_version = "3.9"
follow_imports = "silent"
disallow_any_generics = true
strict_optional = true
check_untyped_defs = true
allow_redefinition = true

[tool.flake8]
max-line-length = 99
ignore = "Q000,E127,E203,E402,W503,W504"

[tool.black]
target-version = ["py39", "py310", "py311"]
line-length = 99

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
